--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+arrow (0.10.0)
+Django (1.10.5)
 pip (9.0.1)
-setuptools (32.1.0)
-virtualenv (15.1.0)
+python-dateutil (2.6.0)
+setuptools (33.1.1)
+six (1.10.0)
 wheel (0.29.0)
+bcrypt==3.1.1
